# ai-memory

./: .gitignore  CRITIQUE.md  QUICK_START.md  README.md  UNIVERSAL_SETUP.md  config.json  config.py  database.py  memory-dashboard.py  memory_client.py  pyproject.toml  server.py
bridges/: gemini-memory-bridge.sh  gemini-memory.sh  gemini-simple.sh  opencode-bridge.py  opencode-ext.json
scripts/: export-copilot-history.py  import-all-ai-history.py  import-all-history.py  install.sh  opencode-memory.sh  start-daemon.sh  start-dashboard.sh  status.sh
utils/: project.py
