[project]
name = "mcp-memory-hub"
version = "0.1.0"
description = "Universal MCP Memory Hub for AI tools"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
memory-hub = "server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]